--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -66,8 +66,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: tox_ngckick_bot_linux_nightly
-          path: tox_ngckick_bot_linux_nightly
+          name: tox_ngckick_bot
+          path: tox_ngckick_bot
 
       - name: Upload to nightly release
         uses: ncipollo/release-action@v1
